2.0.4.2 ($Revision$) $Date$:
* Allow use of %keywords% and commands in anti-idles and with /say
* Nightly builds are now an update type! They are less stable than Alpha.
* Removed the size restraint on the "What's New" window
* Added some error handling for conditions where BNI downloads fail.

2.0.4.1 (r1182) 2008-03-19:
* Added warden support (special thanks to iago and Hdx)
  - Just drop Starcraft.exe in the bot folder!

2.0.4 Beta (r1174) 2008-03-17:
* Added DigitalText connection support
* Fixed a bug where having no connections would cause the GUI to never load
* Added tag to close the HTML table in HTMLOutputEventHandler (Issue 57)
* Introduced first pass at music controllers; not yet configurable or fully tested
  - OSX: iTunes (AppleScript)
  - Windows: iTunes (ActiveX), Winamp (JDIC-MPControl)
  - Linux (JDIC-MPControl): Rhythmbox, XMMS, GMusicBrowser
* Introduced first-pass SWT code to SVN
* Added a PluginManager for plugin discovery with the JARLoader
* Changed /rw to StealthBot-style rewhisper (Issue 58)
* Added the concept of a TimeZone to the HTMLOutputEventHandler
* Reorganized the Settings class
* Added a BNLS bot id
* Changed the way commands respond to fit a more object-oriented model
* Changed the "What's New" window's layout to use cards instead of tabs
* Removed the database tab from the settings window
* Removed the touchUser() exception display
* Added a /quote command to send text directly to bnet
* Added an OperatingSystem enumeration utility
* Added OS-specific version checks; download platform-specific files

2.0.3.1 (r1100) 2008-01-21:
* Added a setting to customize the userlist display format
* Added a setting to customize the command response display format
* Added a setting to enable the HTMLOutput plugin
* Moved the HTMLOutput userlist to logs
* Added highlighting of "my user" in the userlist
* Improved version comparison logic
* Removed the checkbox to disable the GUI from the GUI
* Disabled resizing of configuration windows