@@ -1,8 +1,9 @@
 2.0.4.2 ($Revision$) $Date$:
 * Allow use of %keywords% and commands in anti-idles and with /say
-* Nightly builds are now an update type! They are less stable than Alpha.
+* Nightly builds are now an update type! They are less stable than Alpha
 * Removed the size restraint on the "What's New" window
-* Added some error handling for conditions where BNI downloads fail.
+* Added some error handling for conditions where BNI downloads fail
+* Changed the auto-update algorithm to prevent failed download from breaking the jar
 
 2.0.4.1 (r1182) 2008-03-19:
 * Added warden support (special thanks to iago and Hdx)
